--- a/front-end/static-files/css/ms-plantilla.css
+++ b/front-end/static-files/css/ms-plantilla.css
@@ -5,5 +5,31 @@
  * @date 03-Feb-2023
  */
 
- 
+ table.Estilo_Nombres{
+     width: 100%;
+     border: 1px solid rgba(106,90,205,0.8);
+     text-align: center;
+     font-size: 16px;
+     background-color: #CCCCFF
+ }
 
+table.Estilo_Nombres thead th{
+    text-align:center;
+    font-size: 25px;
+    background-color: #9999FF
+}
+
+table.Estilo_Completo{
+    width: 100%;
+    border: 1px solid rgba(106,90,205,0.8);
+    text-align: center;
+    font-size: 16px;
+    background-color: #CCCCFF;
+}
+
+table.Estilo_Completo thead th{
+    text-align:center;
+    font-size: 20px;
+    background-color: #9999FF;
+    height: 2em;
+}
