--- a/front-end/static-files/css/front-end.css
+++ b/front-end/static-files/css/front-end.css
@@ -21,7 +21,8 @@
 
 
 
-.opcion-principal {
+.opcion-principal,
+.opcion-secundaria{
     border: 2px solid rgba(100, 100, 100, 0.5);
     border-radius: .5em 0 .5em 0;
     padding: .5em;
