--- a/front-end/static-files/css/ms-plantilla.css
+++ b/front-end/static-files/css/ms-plantilla.css
@@ -34,19 +34,20 @@ table.Estilo_Completo thead th{
     height: 2em;
 }
 
-.form-persona-elemento {
+
+.form-jugadores-elemento:disabled {
     color: black;
-    background-color: purple;
+    background-color: inherit;
     border-width: 0px;
     text-align: center;
 }
 
-.form-persona-elemento:enabled{
-    color:rgba(0,0,100,0.8);
+.form-jugadores-elemento:enabled {
+    color:rgba(0, 0, 100, 0.8);
 }
 
-.form-persona-elemento:required {
-    color:rgba(100,0,0,0.8);
+.form-jugadores-elemento:enabled:required {
+    color:rgba(100, 0, 0, 0.8);
 }
 
 .opcion-principal,
